add permissions to frontend

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "node server.js",
-    "init-admin": "node scripts/init-admin.js",
+    "add-user": "node scripts/add-user.js",
     "migrate": "node migrations/002_add_users_and_permissions.js"
   },
   "keywords": [],
