Update dependencies and enhance RSS feed functionality
- Downgraded Express from version 5.1.0 to 4.21.2 for compatibility.
- Added nodemon as a development dependency to streamline server restarts during development.
- Modified RSS feed generation to limit the number of memes returned from the database to 10.
- Updated RSS feed links to use environment variables for base URLs, improving configurability.

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "add-user": "node scripts/add-user.js",
     "migrate": "node migrations/003_change_meme_column_values.js"
   },
@@ -19,5 +19,25 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "server.js",
+      "routes",
+      "middleware",
+      "db",
+      "rss.js"
+    ],
+    "ext": "js,json",
+    "ignore": [
+      "public/images",
+      "node_modules",
+      "**/*.db",
+      "**/*.db-wal",
+      "**/*.db-shm"
+    ]
   }
 }
