feat: add meme management routes with CRUD operations
- Implemented routes for creating, reading, updating, and deleting memes.
- Added image upload functionality using multer.
- Integrated access control based on user roles (admin, writer).
- Included notification system for new memes.

feat: add push notification subscription and notification routes

- Created subscription management route to save and update user subscriptions.
- Developed notification route to send push notifications to users.

feat: implement RSS feed for public memes

- Added RSS feed generation for the latest public memes.
- Included necessary XML formatting and MIME type handling.

feat: user management routes for admin access

- Implemented user management routes for CRUD operations.
- Added pagination and search functionality for user retrieval.
- Included user session management and blocking/unblocking functionality.

feat: set up server with middleware and routes

- Configured Express server with CORS and body parsing.
- Organized routes for authentication, memes, users, and push notifications.

feat: define TypeScript types for better type safety

- Created types for User, Meme, UserSession, Subscription, and API responses.
- Enhanced request handling with custom authenticated request types.

feat: utility functions for file management and notifications

- Added utility functions for deleting images from the server.
- Implemented notification sending logic with subscription filtering.

chore: add TypeScript configuration file

- Included tsconfig.json for TypeScript compiler options and project structure.

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "dist/server.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "add-user": "node scripts/add-user.js",
-    "migrate": "node migrations/003_change_meme_column_values.js"
+    "build": "tsc",
+    "dev": "ts-node src/server.ts",
+    "start": "node dist/server.js",
+    "dev:watch": "nodemon --exec ts-node src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,20 +23,27 @@
     "web-push": "^3.6.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "@types/bcryptjs": "^3.0.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^24.8.1",
+    "@types/sqlite3": "^5.1.0",
+    "@types/web-push": "^3.6.4",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   },
   "nodemonConfig": {
     "watch": [
-      "server.js",
-      "routes",
-      "middleware",
-      "db",
-      "rss.js"
+      "src"
     ],
-    "ext": "js,json",
+    "ext": "ts,js,json",
     "ignore": [
       "public/images",
       "node_modules",
+      "dist",
       "**/*.db",
       "**/*.db-wal",
       "**/*.db-shm"
