--- a/backend/package.json
+++ b/backend/package.json
@@ -1,52 +1,54 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/server.js",
-  "scripts": {
-    "build": "tsc",
-    "dev": "ts-node src/server.ts",
-    "start": "node dist/server.js",
-    "dev:watch": "nodemon --exec ts-node src/server.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2",
-    "sqlite3": "^5.1.7",
-    "web-push": "^3.6.7"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^3.0.0",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
-    "@types/node": "^24.8.1",
-    "@types/sqlite3": "^5.1.0",
-    "@types/web-push": "^3.6.4",
-    "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
-  },
-  "nodemonConfig": {
-    "watch": [
-      "src"
-    ],
-    "ext": "ts,js,json",
-    "ignore": [
-      "public/images",
-      "node_modules",
-      "dist",
-      "**/*.db",
-      "**/*.db-wal",
-      "**/*.db-shm"
-    ]
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "dist/server.js",
+    "scripts": {
+        "build": "tsc",
+        "dev": "ts-node src/server.ts",
+        "start": "node dist/server.js",
+        "dev:watch": "nodemon --exec ts-node src/server.ts",
+        "format": "prettier --write ."
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcryptjs": "^3.0.2",
+        "cors": "^2.8.5",
+        "dotenv": "^17.2.1",
+        "express": "^4.21.2",
+        "jsonwebtoken": "^9.0.2",
+        "multer": "^2.0.2",
+        "sqlite3": "^5.1.7",
+        "web-push": "^3.6.7"
+    },
+    "devDependencies": {
+        "@types/bcryptjs": "^3.0.0",
+        "@types/cors": "^2.8.19",
+        "@types/express": "^5.0.3",
+        "@types/jsonwebtoken": "^9.0.10",
+        "@types/multer": "^2.0.0",
+        "@types/node": "^24.8.1",
+        "@types/sqlite3": "^5.1.0",
+        "@types/web-push": "^3.6.4",
+        "nodemon": "^3.1.10",
+        "prettier": "^3.6.2",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.9.3"
+    },
+    "nodemonConfig": {
+        "watch": [
+            "src"
+        ],
+        "ext": "ts,js,json",
+        "ignore": [
+            "public/images",
+            "node_modules",
+            "dist",
+            "**/*.db",
+            "**/*.db-wal",
+            "**/*.db-shm"
+        ]
+    }
 }
