--- a/front/package.json
+++ b/front/package.json
@@ -36,6 +36,11 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.17"
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.9.3"
   }
 }
